# d4data

./: .gitignore  LICENSE  ParseComplexTypeDescriptorSizes.js  TactKey.js  analyze_all  attributes.json  base_exclusions.txt  build  buildVersion.txt  build_atlas.js  buildlib  compile.cpp  dict.h  dict.json  dict.old.json  dict.txt  dict_expanded.json  dict_expanded.txt  english_dict.txt  field_collisions.yml  field_types.txt  generatedict.js  generatemarkers.js  names.txt  package.json  parse.js  prefix.json  prefix.txt  process.cpp  readme.md  rebuild.sh  skillsvg.js  snoGroups.json  types.cpp  types.h  unfound_core_field_hashes.txt  unfound_field_hash_count.yml  unfound_field_hashes.txt  unfound_hash_count.yml  unfound_hashes.txt
DirectX/: bc.cpp  bc.h  bc4bc5.cpp  bc6hbc7.cpp
analysis/: GameBalance.gam.yml  Global.glo.yml  ParagonBoard.pbd.yml  ParagonGlyph.gph.yml  ParagonGlyphAffix.gaf.yml  ParagonNode.pgn.yml  ParagonThreshold.pth.yml  PlayerClass.pcl.yml  Power.pow.yml  Questqst.yml  SkillKit.skl.yml  Texture.tex.yml  UI.ui.yml  World.wrl.yml  WorldState.wst.yml
analyzer/: analyze.cpp  build
basic_definitions/: !DT_ACD_NETWORK_NAME.aad8c688.yml  !DT_BCVEC2I.731a21b5.yml  !DT_BYTE.3d4646ab.yml  !DT_CHARARRAY.81a89ad4.yml  !DT_CSTRING.e549f591.yml  !DT_ENUM.3d47bd2c.yml  !DT_FIXEDARRAY.8e594306.yml  !DT_FLOAT.e65047ad.yml  !DT_GBID.3d48a14d.yml  !DT_INT.a4c42e02.yml  (+19 more)
checksum/: .gitignore  CMakeLists.txt  build  checksum.cpp  collisions.cpp  dict_collisions.cpp  field_checksum.cpp  field_collisions.cpp  gbid_checksum.cpp  gbid_collisions.cpp  winbuild.bat
(+577678 files in other folders)
